Endret til class

--- a/index.html
+++ b/index.html
@@ -26,102 +26,102 @@
                         <td><h2>Frittata Olivia</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td>
-                        <td id="pris">150</td>
-                        <td id="allergener">Egg, hvete, melk, sennep, svoveldioksid og sulfitt</td>
+                        <td class="beskrivelse">Varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td>
+                        <td class="pris">150</td>
+                        <td class="allergener">Egg, hvete, melk, sennep, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Insalata al salmone</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</td>
-                        <td id="pris">200</td>
-                        <td id="allergener">Fisk, hvete, melk, selleri, svoveldioksid og sulfitt</td>
+                        <td class="beskrivelse">Marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</td>
+                        <td class="pris">200</td>
+                        <td class="allergener">Fisk, hvete, melk, selleri, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Insalata pollo e pancetta</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td>
-                        <td id="pris">300</td>
-                        <td id="allergener">Egg, hvete, melk, soya, svoveldioksid og sulfitt</td>
+                        <td class="beskrivelse">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td>
+                        <td class="pris">300</td>
+                        <td class="allergener">Egg, hvete, melk, soya, svoveldioksid og sulfitt</td>
                     </tr>
 
                     <tr class="row-food">
                         <td><h2>Insalata caprese con parma</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td>
-                        <td id="pris">281</td>
-                        <td id="allergener">Hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
+                        <td class="beskrivelse">Blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td>
+                        <td class="pris">281</td>
+                        <td class="allergener">Hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>4 formaggi</h2></td> 
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Mozzarella, pecorino, parmesan, gorgonzola</td>
-                        <td id="pris">194</td>
-                        <td id="allergener">Hvete, melk</td>
+                        <td class="beskrivelse">Mozzarella, pecorino, parmesan, gorgonzola</td>
+                        <td class="pris">194</td>
+                        <td class="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Mare e monti</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</td>
-                        <td id="pris">301</td>
-                        <td id="allergener">Hvete, melk, skalldyr</td>
+                        <td class="beskrivelse">Crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</td>
+                        <td class="pris">301</td>
+                        <td class="allergener">Hvete, melk, skalldyr</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Pollo bianco</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td>
-                        <td id="pris">200</td>
-                        <td id="allergener">Hvete, melk, pinjekjerne, soya</td>
+                        <td class="beskrivelse">Mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td>
+                        <td class="pris">200</td>
+                        <td class="allergener">Hvete, melk, pinjekjerne, soya</td>
                     </tr>
                     <tr>
                         <td class="row-food"><h2>Agli asparagi</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Asparges, crème fraîche, sitron</td>
-                        <td id="pris">199</td>
-                        <td id="allergener">Hvete, melk</td>
+                        <td class="beskrivelse">Asparges, crème fraîche, sitron</td>
+                        <td class="pris">199</td>
+                        <td class="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Al prosciutto cotto</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">tomat, mozzarella, italiensk skinke, basilikum</td>
-                        <td id="pris">201</td>
-                        <td id="allergener">Hvete, melk</td>
+                        <td class="beskrivelse">tomat, mozzarella, italiensk skinke, basilikum</td>
+                        <td class="pris">201</td>
+                        <td class="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Mozzarella di burrata</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Tomat, nduja, mozzarella, burrata, ruccola</td>
-                        <td id="pris">299</td>
-                        <td id="allergener">Hvete, melk</td>
+                        <td class="beskrivelse">Tomat, nduja, mozzarella, burrata, ruccola</td>
+                        <td class="pris">299</td>
+                        <td class="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Coca cola</h2></td>
-                        <td id="pris">39</td>
-                        <td id="allergener">Ingen allergener</td>
+                        <td class="pris">39</td>
+                        <td class="allergener">Ingen allergener</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Frydenlund</h2></td>
-                        <td id="pris">89</td>
-                        <td id="allergener">Hvete</td>
+                        <td class="pris">89</td>
+                        <td class="allergener">Hvete</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Vann</h2></td>
-                        <td id="pris">15</td>
-                        <td id="allergener">Ingen allergener</td>
+                        <td class="pris">15</td>
+                        <td class="allergener">Ingen allergener</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Is</h2></td>
-                        <td id="pris">49</td>
-                        <td id="allergener">Melk</td>
+                        <td class="pris">49</td>
+                        <td class="allergener">Melk</td>
                     </tr>
     </body>
 </html>
