Klasser lagt til

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </tr>
                     <tr>
                         <td class="beskrivelse">Varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td>
-                        <td>150</td>
+                        <td class="pris">150</td>
                         <td class="allergener">Egg, hvete, melk, sennep, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
@@ -35,7 +35,7 @@
                     </tr>
                     <tr>
                         <td class="beskrivelse">Marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</td>
-                        <td>200</td>
+                        <td class="pris">200</td>
                         <td class="allergener">Fisk, hvete, melk, selleri, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
@@ -43,7 +43,7 @@
                     </tr>
                     <tr>
                         <td class="beskrivelse">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td>
-                        <td>300</td>
+                        <td class="pris">300</td>
                         <td class="allergener">Egg, hvete, melk, soya, svoveldioksid og sulfitt</td>
                     </tr>
 
@@ -52,15 +52,15 @@
                     </tr>
                     <tr>
                         <td class="beskrivelse">Blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td>
-                        <td>281</td>
-                        <td>Hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
+                        <td class="pris">281</td>
+                        <td class="allergener">Hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>4 formaggi</h2></td> 
                     </tr>
                     <tr>
                         <td class="beskrivelse">Mozzarella, pecorino, parmesan, gorgonzola</td>
-                        <td>194</td>
+                        <td class="pris">194</td>
                         <td class="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
@@ -68,7 +68,7 @@
                     </tr>
                     <tr>
                         <td class="beskrivelse">Crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</td>
-                        <td>301</td>
+                        <td class="pris">301</td>
                         <td class="allergener">Hvete, melk, skalldyr</td>
                     </tr>
                     <tr class="row-food">
@@ -76,15 +76,15 @@
                     </tr>
                     <tr>
                         <td class="beskrivelse">Mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td>
-                        <td>200</td>
-                        <td>Hvete, melk, pinjekjerne, soya</td>
+                        <td class="pris">200</td>
+                        <td class="allergener">Hvete, melk, pinjekjerne, soya</td>
                     </tr>
                     <tr>
                         <td class="row-food"><h2>Agli asparagi</h2></td>
                     </tr>
                     <tr>
                         <td class="beskrivelse">Asparges, crème fraîche, sitron</td>
-                        <td>199</td>
+                        <td class="pris">199</td>
                         <td class="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
@@ -92,7 +92,7 @@
                     </tr>
                     <tr>
                         <td class="beskrivelse">tomat, mozzarella, italiensk skinke, basilikum</td>
-                        <td>201</td>
+                        <td class="pris">201</td>
                         <td class="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
@@ -100,28 +100,28 @@
                     </tr>
                     <tr>
                         <td class="beskrivelse">Tomat, nduja, mozzarella, burrata, ruccola</td>
-                        <td>299</td>
+                        <td class="pris">299</td>
                         <td class="allergener">Hvete, melk</td>
                     </tr>
                     <th><h2>Drikke</h2></th>
                     <tr class="row-drink">
                         <td><h3>Coca cola</h3></td>
-                        <td>39</td>
+                        <td class="pris">39</td>
                         <td class="allergener">Ingen allergener</td>
                     </tr>
                     <tr class="row-drink">
                         <td><h3>Frydenlund</h3></td>
-                        <td>89</td>
+                        <td class="pris">89</td>
                         <td class="allergener">Hvete</td>
                     </tr>
                     <tr class="row-drink">
                         <td><h3>Vann</h3></td>
-                        <td>15</td>
+                        <td class="pris">15</td>
                         <td class="allergener">Ingen allergener</td>
                     </tr>
                     <tr class="row-drink">
                         <td><h3>Is</h3></td>
-                        <td>49</td>
+                        <td class="pris">49</td>
                         <td class="allergener">Melk</td>
                     </tr>
     </body>
