--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         <div id="container">
             <div id="header">
-                <h1>Simple Menu</h1>
+                <h1>Simple Menut</h1>
             </div>
 
             <!--Create a container that will contain a menu for 15 different dishes with allergies in a table-->
