Lagt til et par ID

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
         
         <div id="container">
             <div id="header">
-                <h1>Simple Menut</h1>
+                <div id="logo">
+                    <h1>Simple Menu</h1>
+                </div>
+                
+                <ul id="buttons">
+                    <li><a href="index.html">Hjem</a></li>
+                    <li><a href="about.html">Om oss</a></li>
+                </ul>   
             </div>
 
             <!--Create a container that will contain a menu for 15 different dishes with allergies in a table-->
