--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
             <div id="header">
                 <div id="logo">
                     <h1>Simple Menu</h1>
-                </div>
-                
-                <ul id="buttons">
-                    <li><a href="index.html">Hjem</a></li>
-                    <li><a href="about.html">Om oss</a></li>
-                </ul>   
+                </div> 
             </div>
 
             <!--Create a container that will contain a menu for 15 different dishes with allergies in a table-->
             <div id="menu">
+                <div class="" id="">
+                    <div>
+
+                    </div>
+                </div>
+
+                <div class=""></div>
                 <table>
                     <tr><td><h1>Meny</h1></td></tr>
                     <tr>
@@ -131,5 +133,11 @@
                         <td class="pris">49</td>
                         <td class="allergener">Melk</td>
                     </tr>
+                </table>
+            </div>
+        <div id="footer">
+            <p>© 2022 - Restaurant Pizzabianco</a></p>
+        </div>
+
     </body>
 </html>
