--- a/index.html
+++ b/index.html
@@ -17,13 +17,45 @@
 
             <!--Create a container that will contain a menu for 15 different dishes with allergies in a table-->
             <div id="menu">
-                <div class="" id="">
-                    <div>
+                <div id="menu-container">
+                    <div id="menu-heading">
+                        <p class="heading-text">Matretter</p>
+                    </div>
 
+                    <div id="menu-items">
+                        <div class="menu-item">
+                            <p class="menu-item-header">Frittata Olivia</p>
+                            <p class="menu-item-description">Varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</p>
+                            <p class="menu-item-allergens">Egg, hvete, melk, sennep, svoveldioksid og sulfitt</p>
+                        </div>
+                        <div class="menu-item">
+                            <p class="menu-item-header">Insalata al salmone</p>
+                            <p class="menu-item-description">Marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</p>
+                            <p class="menu-item-allergens">Fisk, hvete, melk, selleri, svoveldioksid og sulfitt</p>
+                        </div>
+                        <div class="menu-item">
+                            <p class="menu-item-header">Insalata pollo e pancetta</p>
+                            <p class="menu-item-description">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</p>
+                            <p class="menu-item-allergens">Egg, hvete, melk, soya, svoveldioksid og sulfitt</p>
+                        </div>
+                        <div class="menu-item">
+                            <p class="menu-item-header">Insalata caprese con parma</p>
+                            <p class="menu-item-description">Blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</p>
+                            <p class="menu-item-allergens">Hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</p>
+                        </div>
+                        <div class="menu-item">
+                            <p class="menu-item-header">4 formaggi</p>
+                            <p class="menu-item-description">Mozzarella, pecorino, parmesan, gorgonzola</p>
+                            <p class="menu-item-allergens">Hvete, melk</p>
+                        </div>
+                        <div class="menu-item">
+                            <p class="menu-item-header">Mare e monti</p>
+                            <p class="menu-item-description">Crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</p>
+                            <p class="menu-item-allergens">Hvete, melk, skalldyr</p>
+                        </div>
                     </div>
                 </div>
-
-                <div class=""></div>
+                <!--    </div>
                 <table>
                     <tr><td><h1>Meny</h1></td></tr>
                     <tr>
@@ -133,10 +165,11 @@
                         <td class="pris">49</td>
                         <td class="allergener">Melk</td>
                     </tr>
-                </table>
+                </table> -->
             </div>
         <div id="footer">
-            <p>© 2022 - Restaurant Pizzabianco</a></p>
+            <p>© 2022 - Restaurant Pizzabianco<br></p>
+            <p>Kontakt +4790909090</p>
         </div>
 
     </body>
