--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" lang="no">
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./style/style.css">
         <title>Simple Menu</title>   
@@ -19,7 +19,7 @@
                 </div>  
             </div>
 
-            <!--Create a container that will contain a menu for 15 different dishes with allergies in a table-->
+
             <div id="menu">
                 <div id="menu-container">
                     <div id="menu-heading">
