--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
                     <h1 id="title" >Simple Menu</h1>
                 </div> 
                 <div id="contact-info">
-                    <p class="contact-info">Telefon: 90909090</p>
-                    <p class="contact-info">Adresse: Osloveien 2022</p>
+                    <h2 class="header-title">Kontakt oss</h2>
+                    <p class="contact-info-details">E-post: <a href="mailto:post@simplemenu.no"> post@simplemenu.no</a> </p>
+                    <p class="contact-info-details">Telefon: +47 90 90 90 90</p>
+                    <p class="contact-info-details">Adresse: Osloveien 22, 0101 Oslo</p> 
+                </div>
+                <div id="opening-hours">
+                    <h2 class="header-title">Åpningstider:</h2>
+                    <p class="opening-hours-details">Søndag og mandag:&nbsp;15:00-21:00</p>
+                    <p class="opening-hours-details">Tirsdag-lørdag:&nbsp;10:00-23:00</p>
+                    <p class="opening-hours-details">Kjøkkenet stenger 30 min. før stengetid</p>
                 </div>  
             </div>
 
@@ -29,31 +37,37 @@
                     <div id="menu-items">
                         <div class="menu-item">
                             <p class="menu-item-header">Frittata Olivia</p>
+                            <p class="menu-item-price">149,-</p>
                             <p class="menu-item-description">Varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</p>
                             <p class="menu-item-allergens">Egg, hvete, melk, sennep, svoveldioksid og sulfitt</p>
                         </div>
                         <div class="menu-item">
                             <p class="menu-item-header">Insalata al salmone</p>
+                            <p class="menu-item-price">129,-</p>
                             <p class="menu-item-description">Marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</p>
                             <p class="menu-item-allergens">Fisk, hvete, melk, selleri, svoveldioksid og sulfitt</p>
                         </div>
                         <div class="menu-item">
                             <p class="menu-item-header">Insalata pollo e pancetta</p>
+                            <p class="menu-item-price">249,-</p>
                             <p class="menu-item-description">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</p>
                             <p class="menu-item-allergens">Egg, hvete, melk, soya, svoveldioksid og sulfitt</p>
                         </div>
                         <div class="menu-item">
                             <p class="menu-item-header">Insalata caprese con parma</p>
+                            <p class="menu-item-price">249,-</p>
                             <p class="menu-item-description">Blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</p>
                             <p class="menu-item-allergens">Hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</p>
                         </div>
                         <div class="menu-item">
                             <p class="menu-item-header">4 formaggi</p>
+                            <p class="menu-item-price">199,-</p>
                             <p class="menu-item-description">Mozzarella, pecorino, parmesan, gorgonzola</p>
                             <p class="menu-item-allergens">Hvete, melk</p>
                         </div>
                         <div class="menu-item">
                             <p class="menu-item-header">Mare e monti</p>
+                            <p class="menu-item-price">199,-</p>
                             <p class="menu-item-description">Crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</p>
                             <p class="menu-item-allergens">Hvete, melk, skalldyr</p>
                         </div>
@@ -66,6 +80,7 @@
                     <div id="menu-items">
                         <div class="menu-item">
                             <p class="menu-item-header">Mineralvann</p>
+                            <p class="menu-item-price">39,-</p>
                             <p class="menu-item-description">Coca cola <br> Fanta <br> Solo</p>
                         </div>
                         <div class="menu-item">
@@ -75,7 +90,7 @@
                         </div>
                 </div>
         <div id="footer">
-            <p>© 2022 - Restaurant Pizzabianco<br></p>
+            <p>© 2022 - Restaurant Pizzabianco <br></p>
             <p>Kontakt +4790909090</p>
         </div>
 
