--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div id="contact-info">
                     <h2 class="header-title">Kontakt oss</h2>
                     <p class="contact-info-details">E-post: <a href="mailto:post@simplemenu.no"> post@simplemenu.no</a> </p>
-                    <p class="contact-info-details">Telefon: +47 90 90 90 90</p>
+                    <p class="contact-info-details">Telefon: +47 90909090</p>
                     <p class="contact-info-details">Adresse: Osloveien 22, 0101 Oslo</p> 
                 </div>
                 <div id="opening-hours">
